[gd_scene load_steps=9 format=3 uid="uid://bllxov6u065v1"]

[ext_resource type="Script" path="res://Scripts/Skill.gd" id="1_y0oif"]
[ext_resource type="Texture2D" uid="uid://c6mnwjkt1waio" path="res://Resources/Sprites/Skills/Outline.png" id="3_f41bu"]
[ext_resource type="Texture2D" uid="uid://dg7c8gc8ch827" path="res://Resources/Sprites/Skills/Lock.png" id="3_qyum3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tlviy"]
atlas = ExtResource("3_qyum3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io3h0"]
atlas = ExtResource("3_qyum3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpjxs"]
atlas = ExtResource("3_qyum3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy0cd"]
atlas = ExtResource("3_qyum3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ie2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlviy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io3h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpjxs")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_uy0cd")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 4.0
}]

[node name="Skill" type="TextureButton"]
offset_left = 1.0
offset_top = 1.0
offset_right = 33.0
offset_bottom = 33.0
scale = Vector2(4, 4)
toggle_mode = true
script = ExtResource("1_y0oif")

[node name="Outline" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -1)
texture = ExtResource("3_f41bu")
centered = false

[node name="Lock" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_4ie2e")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
[connection signal="animation_finished" from="Lock" to="." method="_on_lock_animation_finished"]
